<resources>
    <string name="app_name">Crypto</string>
    <string name="plaintext">明文</string>
    <string name="hint">明文</string>
    <string name="ciphertext">密文</string>
    <string name="button">Base64加密</string>
    <string name="button2">Xor加密</string>
    <string name="button3">TEA加密</string>
    <string name="button4">AES加密</string>
    <string name="button5">DES加密</string>
    <string name="button6">RSA加密</string>
    <string name="button7">MD5加密</string>
</resources>